examples/test/testpolicy8544.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8544
  namespace: namespace445
spec:
  podSelector:
    matchLabels:
      key8: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value33
          key15: value33
          key38: value11
      podSelector:
        matchLabels:
          key49: value27
